--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Test LinuxStat with Ruby 2.3
+    - name: Test LibmagicRb with Ruby 2.3
       uses: ruby/setup-ruby@v1.59.1
       with:
         ruby-version: 2.3
@@ -26,7 +26,7 @@ jobs:
       run: rake test
 
     - uses: actions/checkout@v2
-    - name: Test LinuxStat with Ruby 2.5
+    - name: Test LibmagicRb with Ruby 2.5
       uses: ruby/setup-ruby@v1.59.1
       with:
         ruby-version: 2.5
@@ -38,7 +38,7 @@ jobs:
       run: rake test
 
     - uses: actions/checkout@v2
-    - name: Test LinuxStat with Ruby 2.7
+    - name: Test LibmagicRb with Ruby 2.7
       uses: ruby/setup-ruby@v1.59.1
       with:
         ruby-version: 2.7
@@ -49,9 +49,9 @@ jobs:
     - name: Run tests
       run: rake test
 
-    - uses: actions/checkout@v2
-    - name: Test LinuxStat with Ruby 3.0
-      uses: ruby/setup-ruby@v1.59.1
+    - uses: actions/checkout@v4
+    - name: Test LibmagicRb with Ruby 3.0
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.0
     - name: Install dependencies
